--- a/profiles/Hardcore.cfg
+++ b/profiles/Hardcore.cfg
@@ -3,7 +3,7 @@ assetIndex: "1.12.2"; # 1.7.10+ only
 
 # Runtime-dependent params
 dir: "Hardcore";
-assetDir: "asset1.12.2";
+assetDir: "Hardcore";
 
 # Client params
 sortIndex: 0;
