--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 libraries/
-updates/jre-8u202-linux32/
-updates/jre-8u202-linux64/
-updates/jre-8u202-macosx/
-updates/jre-8u202-win32/
-updates/jre-8u202-win64/
-updates/Hardcore/indexes/
-updates/Hardcore/objects/
-updates/Hardcore/libraries/
-updates/asset1.12.2/
+updates/
+LaunchServer.log
